fix footer visibility

--- a/Styles/form.css
+++ b/Styles/form.css
@@ -171,7 +171,7 @@ button:hover{
     background-color: #482ff7;
 }
 .footer p {
-    font-size: smaller;
+    font-size: small;
     font-weight: bolder;
     color: #fff;
 }
